fix(wizard): allow long page titles to wrap in stepnav (#1211)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [x] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Longer page titles in the wizard do not wrap, resulting in some text
being hidden. Longer text strings are necessary for
internationalization, as relative short titles in english can become
much longer in other languages.

Issue Number: CDE-1648, CDE-1645

## What is the new behavior?

Longer page titles will wrap when listed in the step nav. 

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -1607,7 +1607,7 @@ $metropolis-font-family: Metropolis, 'Avenir Next', 'Helvetica Neue', Arial, san
   --clr-wizard-stepnav-link-line-height: #{baselinePx(20)};
   --clr-wizard-stepnav-item-padding: #{tokens.$cds-global-space-4} 0 #{tokens.$cds-global-space-4} #{tokens.$cds-global-space-3};
   --clr-wizard-stepnav-padding: 0 0 var(--clr-wizard-main-padding) var(--clr-wizard-main-padding);
-  --clr-wizard-stepnav-link-padding: #{tokens.$cds-global-space-5};
+  --clr-wizard-stepnav-link-padding: calc(#{tokens.$cds-global-space-5} - #{tokens.$cds-global-space-1});
   --clr-wizard-stepnav-link-suffix-padding: 0 #{tokens.$cds-global-space-5} 0 0;
   --clr-wizard-stepnav-link-error-icon-color: #{tokens.$cds-alias-status-danger};
   --clr-wizard-stepnav-item-error-border-color: transparent;
